--- a/Java/java-03/PooJavaAvanzado/src/usuario.properties
+++ b/Java/java-03/PooJavaAvanzado/src/usuario.properties
@@ -1,4 +1,4 @@
-username = Rosy
-password = 123
-nombre = Rosalba
-email = rosy@correo.com
+usrname = Juan
+password = Juan123sito
+nombre = Juan Cordero de Dios
+email = juan@juancho.com
